--- a/SparkStreaming/pom.xml
+++ b/SparkStreaming/pom.xml
@@ -77,6 +77,11 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>SparkStreamingToES</mainClass>
+                        </manifest>
+                    </archive>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
