--- a/hive-jdbc-connection/pom.xml
+++ b/hive-jdbc-connection/pom.xml
@@ -14,8 +14,8 @@
     <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
     <dependency>
         <groupId>org.apache.spark</groupId>
-        <artifactId>spark-core_2.11</artifactId>
-        <version>2.2.1</version>
+        <artifactId>spark-core_2.10</artifactId>
+        <version>1.6.3</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
     <dependency>
@@ -28,6 +28,13 @@
             <artifactId>hive-jdbc</artifactId>
             <version>1.2.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.10</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+
 
     </dependencies>
 
