--- a/spark-actions/pom.xml
+++ b/spark-actions/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spark-actions</artifactId>
+    <artifactId>sparkActions</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
